[metadata]
name = aquasec-api
version = attr: aquasec.__version__
author = atav928
description = Aqua Security SDK to pull data from Aquasec Tenant and CSPM for auditing
author_email = dev@tavnets.com
keywords = aquasec, aqua security, workload protection
long_description = file: README.md, SECURITY.md
long_description_content_type = text/markdown
license = GNU
license_files = LICENSE

[options]
python_requires = >3.8, <4
include_package_data = True
packages = find:
install_requires =
    requests >= 2.26.0
    PyJWT ~= 2.6.0
    dataclasses >= 0.6
    PyYAML >= 6.0
    dict_to_dataclass ~= 0.0.8
zip_safe = True

[options.packages.find]
include = aquasec*

[options.package_data]
* = *.txt, *.md, *.rst